--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,16 @@ xcblorder.topic=XCBL-ORDER-TOPIC
 spring.kafka.properties.ssl.endpoint.identification.algorithm=
 spring.kafka.consumer.group-id=xcbl-order-consumers
 
+server.ssl.key-store-type=JKS
+# The path to the keystore containing the certificate
+server.ssl.key-store=classpath:keystore/server.keystore.jks
+
+server.ssl.trust-store=classpath:keystore/server.truststore.jks
+# The password used to generate the certificate
+server.ssl.key-store-password=Ngoipass123!
+server.ssl.trust-store-password=Ngoipass123!
+# The alias mapped to the certificate
+server.ssl.key-alias=localhost
 
 feign.client.config.transactiondataservice.connectTimeout=30000
 feign.client.config.transactiondataservice.readTimeout=60000
