--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ spring.kafka.properties.ssl.endpoint.identification.algorithm=
 spring.kafka.consumer.group-id=xcbl-order-consumers
 
 server.ssl.key-store-type=JKS
+
+server.ssl.trust-store-type=JKS
 # The path to the keystore containing the certificate
 server.ssl.key-store=classpath:keystore/server.keystore.jks
 
