--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ server.ssl.trust-store-type=JKS
 # The path to the keystore containing the certificate
 server.ssl.key-store=classpath:keystore/server.keystore.jks
 
-server.ssl.trust-store=file:keystore/server.truststore.jks
+server.ssl.trust-store=file:/keystore/server.truststore.jks
 # The password used to generate the certificate
 server.ssl.key-store-password=Ngoipass123!
 server.ssl.trust-store-password=Ngoipass123!
