--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,11 +12,11 @@ spring.kafka.consumer.group-id=xcbl-order-consumers
 
 server.ssl.key-store-type=JKS
 
-server.ssl.trust-store-type=JKS
+#server.ssl.trust-store-type=JKS
 # The path to the keystore containing the certificate
 server.ssl.key-store=classpath:keystore/server.keystore.jks
 
-server.ssl.trust-store=classpath:keystore/server.truststore.jks
+server.ssl.trust-store=classpath:keystore/cacerts
 # The password used to generate the certificate
 server.ssl.key-store-password=Ngoipass123!
 server.ssl.trust-store-password=Ngoipass123!
