--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,14 +12,17 @@ spring.kafka.consumer.group-id=xcbl-order-consumers
 
 server.ssl.key-store-type=JKS
 
-#server.ssl.trust-store-type=JKS
+
 # The path to the keystore containing the certificate
 server.ssl.key-store=classpath:keystore/server.keystore.jks
 
-server.ssl.trust-store=classpath:keystore/cacerts
+server.ssl.trust-store-type=JKS
+server.ssl.trust-store=classpath:server.truststore.jks
+server.ssl.trust-store-password=Ngoipass123!
+
 # The password used to generate the certificate
 server.ssl.key-store-password=Ngoipass123!
-server.ssl.trust-store-password=Ngoipass123!
+
 # The alias mapped to the certificate
 server.ssl.key-alias=localhost
 
