--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,15 +10,19 @@ xcblorder.topic=XCBL-ORDER-TOPIC
 spring.kafka.properties.ssl.endpoint.identification.algorithm=
 spring.kafka.consumer.group-id=xcbl-order-consumers
 
+spring.kafka.consumer.ssl.trust-store-location=classpath:server.truststore.jks
+spring.kafka.consumer.ssl.trust-store-password=Ngoipass123!
+spring.kafka.consumer.ssl.trust-store-type=JKS
+
 server.ssl.key-store-type=JKS
 
 
 # The path to the keystore containing the certificate
 server.ssl.key-store=classpath:keystore/server.keystore.jks
 
-server.ssl.trust-store-type=JKS
-server.ssl.trust-store=classpath:server.truststore.jks
-server.ssl.trust-store-password=Ngoipass123!
+#server.ssl.trust-store-type=JKS
+#server.ssl.trust-store=classpath:server.truststore.jks
+#server.ssl.trust-store-password=Ngoipass123!
 
 # The password used to generate the certificate
 server.ssl.key-store-password=Ngoipass123!
@@ -35,3 +39,4 @@ feign.client.config.validateorderservice.readTimeout=60000
 
 feign.client.config.ordermappingservice.connectTimeout=30000
 feign.client.config.ordermappingservice.readTimeout=60000
+
