--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ xcblorder.topic=XCBL-ORDER-TOPIC
 spring.kafka.properties.ssl.endpoint.identification.algorithm=
 spring.kafka.consumer.group-id=xcbl-order-consumers
 
-spring.kafka.consumer.ssl.trust-store-location=classpath:server.truststore.jks
+spring.kafka.consumer.ssl.trust-store-location=file:/tmp/server.truststore.jks
 spring.kafka.consumer.ssl.trust-store-password=Ngoipass123!
 spring.kafka.consumer.ssl.trust-store-type=JKS
 
